--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,5 +1,5 @@
 /** @format */
-:root {
+/* :root {
 	font-family: Arial, sans-serif;
 	font-size: 16px;
 	box-sizing: border-box;
@@ -50,12 +50,8 @@
 	align-items: center;
 	gap: 8px;
 	cursor: pointer;
-}
+} */
 
-
-
-
-/* 
 :root {
 	font-family: Arial, sans-serif;
 	font-size: 16px;
@@ -83,13 +79,15 @@
 .header-logo {
 	display: flex;
 	align-items: center;
-	gap: 12px;
+	gap: 2px;
 	font-weight: bold;
-	font-size: 18px;
+	font-size: 26px;
+	position: relative;
+    left: 50px
 }
 
 .logo-icon {
-	font-size: 20px;
+	width: 45px;
 }
 
 .header-items {
@@ -117,4 +115,4 @@
 		width: 100%;
 		justify-content: space-between;
 	}
-} */
+}
